fetch data from database

--- a/app/views/RSVP.pug
+++ b/app/views/RSVP.pug
@@ -4,7 +4,7 @@ block content
       div.row
         div.col-md-6.offset-md-3
           form(method="post", action="/reserve-booking")
-            div.form-group
+            div.form-group(style="margin-top:2%")
               label(for="name") Name
               input.form-control(type="text", name="name", required)
             div.form-group
@@ -26,25 +26,3 @@ block content
               label(for="message") Message
               textarea.form-control(name="message", rows="5")
             button.btn.btn-primary(type="submit") Reserve Booking
-
-//- doctype html
-//- html(lang="en")
-  head
-    title User Profile Form - Wedding Reservation
-    meta(name="viewport", content="width=device-width, initial-scale=1")
-    link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css", integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T", crossorigin="anonymous")
-  body
-    //- nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
-    //-   a.navbar-brand(href="#") Wedding Reservation
-    //-   button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarResponsive", aria-controls="navbarResponsive", aria-expanded="false", aria-label="Toggle navigation")
-    //-     span.navbar-toggler-icon
-    //-   div#navbarResponsive.collapse.navbar-collapse
-    //-     ul.navbar-nav.mr-auto
-    //-       li.nav-item.active
-    //-         a.nav-link(href="#") Home
-    //-       li.nav-item
-    //-         a.nav-link(href="#about") About
-    //-       li.nav-item
-    //-         a.nav-link(href="#services") Services
-    //-       li.nav-item
-    //-         a.nav-link(href="#contact") Contact
