--- a/app/views/user.pug
+++ b/app/views/user.pug
@@ -5,8 +5,7 @@ block content
         p Address: #{user.address}
         p Email Id: #{user.emailid}
         p Contact: #{user.contact}
-
-        p Cake : #{user.cakeid.Name}
+        p Cake : #{user.cakeid}
         p Flower: #{user.flowersid}
         p Decorations: #{user.decorationsid}
-        p Location : #{user.venuesid.Name}
+        p Location : #{user.venuesid}
